[feature/reddit-deviget] Updated template generators files

--- a/generators/template/index.tsx.hbs
+++ b/generators/template/index.tsx.hbs
@@ -1,9 +1,9 @@
 import * as Style from './styles'
 
 const {{pascalCase name}} = () => (
-  <Style.Wrapper>
+  <Style.{{pascalCase name}}>
     <h1>{{pascalCase name}} Template</h1>
-  </Style.Wrapper>
+  </Style.{{pascalCase name}}>
 )
 
 export default {{pascalCase name}}
